# tabular-data-generator-ctgan

./: .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
artifacts/: preprocess_artifacts.json
configs/: default.yaml
data/processed/: synth_constrained_ctgan_1x.csv  synth_constrained_ctgan_5x.csv  synth_constrained_tvae_1x.csv  synth_constrained_tvae_5x.csv  synth_raw_ctgan_1x.csv  synth_raw_ctgan_5x.csv  synth_raw_tvae_1x.csv  synth_raw_tvae_5x.csv  test_model.csv  test_with_dates.csv  train_model.csv  train_with_dates.csv
data/synthetic/: ctgan_1x.csv  ctgan_5x.csv  tvae_1x.csv
scripts/: run_pipeline.py
src/: __init__.py  constraints.py  eval_privacy.py  eval_similarity.py  eval_utility.py  generate.py  pipeline.py  preprocess.py  report.py  schema.py  train.py
tests/: test_constraints.py  test_pipeline_smoke.py  test_preprocess.py
